# may_embed_svelte_sample

./: Cargo.toml  rs_may_embed_svelte_sample.code-workspace
src/: main.rs  mime_mapper.rs
