[package]
name = "may_embed_svelte_sample"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true # get api doc for all features on https://docs.rs

[dependencies]
env_logger = { version = "0.11.5", no-default-features = true }
log = { version = "0.4.22" }
may = { version = "0.3.46" }
may_minihttp = { version = "0.1.1" }
mime_guess = { version = "2.0.5" }
rust-embed = { version = "8.5.0" }

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macros = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = "warn"
